--- a/webSite/src/assets/css/styles.css
+++ b/webSite/src/assets/css/styles.css
@@ -1,3 +1,13 @@
+:root {
+    --main-bg: black;
+    --main-color: white;
+    --dark-grey: rgb(101, 101, 101);
+    --container-bg: #262626;
+    --highlight-color: #E50914;
+    --call-to-action: aqua;
+    --positive-correspondance: green;
+}
+
 body {
     background-color: #f2f2f2;
     font-family: Arial, sans-serif;
@@ -38,4 +48,37 @@ h1 {
 
 .menu a:hover {
     background-color: #0056b3;
+}
+
+#loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+#logo {
+    height: 75vh;
+}
+
+.spinner {
+    border: 8px solid;
+    border-color: --dark-grey;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 8vw;
+    height: 8vw;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
