--- a/webSite/src/assets/css/styles_fight.css
+++ b/webSite/src/assets/css/styles_fight.css
@@ -2,10 +2,29 @@
 body {
     text-align: center;
     margin: 0;
+    color: rgb(195, 188, 202);
+    border: 15px solid black; 
 }
+
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../../../figures/1.png);
+    background-size: cover;
+    filter: blur(8px); /* Adjust the blur strength as needed */
+    z-index: -1; /* Place the blurred background behind the main content */
+}
+
 #main {
     display: flex;
     min-height: calc(100vh - 40vh);
+    position: relative;
+    z-index: 1; /* Ensure the main content appears above the blurred background */
 }
 #main > article {
     flex: 1;
@@ -13,7 +32,6 @@ body {
 #main > nav, 
 #main > aside {
     flex: 0 0 20vw;
-    background: beige;
 }
 #main > nav {
     order: -1;
@@ -22,14 +40,70 @@ header, footer, article, nav, aside {
     padding: 1em;
 }
 header, footer {
-    background: yellowgreen;
+    background: rgb(66, 0, 128);
     height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Center horizontally */
+}
+
+header {
+    border-bottom: 5px solid black; 
+}
+
+footer {
+    border-top: 5px solid black; 
 }
 
 h2 {
     min-height: 50px;
 }
-img {
+#main img {
     max-width: 30%;
     height: auto;
+}
+
+#targetWord, #wordWritten {
+    font-size: 24px;
+    padding: 10px;
+
+    display: flex;
+    align-items: center; /* Center vertically */
+    justify-content: center; /* Center horizontally */
+    text-align: center; /* Additional centering for text */
+}
+
+#wordWritten {
+    border: 1px solid #000;
+    background-color: #f0f0f0; /* Light gray background */
+    color: rgb(0, 0, 0);
+
+
+}
+
+#endLabel {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(0, 191, 255);
+    border: 5px solid rgb(0, 56, 139);
+
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    z-index: 9999; /* Ensure the label is on top of everything */
+}
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+    z-index: 9998; /* Z-index just below the label */
 }
