--- a/webSite/src/assets/css/monsterFinderStyles.css
+++ b/webSite/src/assets/css/monsterFinderStyles.css
@@ -1,15 +1,38 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-image: url("../../../../figures/9.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+#main-img {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0;
+    transition: opacity 1s ease;
 }
 
-.darken {
+#main-img.fade-in {
+    opacity: 1;
+}
+
+#main-img.fade-out {
+    opacity: 0;
+}
+
+#main-img.filter {
+    filter: blur(5px);
+    transition : filter 1s ease;
+}
+
+#main-img.filter::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    transition: background-color 1s ease;
+    transition: opacity 1s ease;
+    z-index: -1;
 }
 
 #story-text {
@@ -42,11 +65,21 @@ body {
     padding: 10px;
     font-size: 16px;
     cursor: pointer;
+    opacity: 0;
+    transition: opacity 1s ease;
 }
 
 #skip-button::after {
     content: '\2192';
     margin-left: 5px;
+}
+
+#skip-button.fade-in {
+    opacity: 1;
+}
+
+#skip-button.fade-out {
+    opacity: 0;
 }
 
 #clock {
@@ -59,5 +92,14 @@ body {
     background-color: #000;
     padding: 10px;
     border-radius: 5px;
+    opacity: 0;
+    transition: opacity 1s ease;
 }
 
+#clock.fade-in {
+    opacity: 1;
+}
+
+#clock.fade-out {
+    opacity: 0;
+}
