--- a/webSite/src/assets/css/monsterFinderStyles.css
+++ b/webSite/src/assets/css/monsterFinderStyles.css
@@ -12,6 +12,11 @@ body {
     transition: background-color 1s ease;
 }
 
+:not(.darken) {
+    background-color: rgba(255, 255, 255, 0);
+    transition: background-color 1s ease;
+}
+
 #story-text {
     position: absolute;
     top: 50%;
