--- a/webSite/src/assets/css/styles_fight.css
+++ b/webSite/src/assets/css/styles_fight.css
@@ -14,7 +14,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../../../figures/1.png);
+    background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../png/garage/0_light.png);
     background-size: cover;
     filter: blur(8px); /* Adjust the blur strength as needed */
     z-index: -1; /* Place the blurred background behind the main content */
