--- a/webSite/src/assets/css/styles_keyboard.css
+++ b/webSite/src/assets/css/styles_keyboard.css
@@ -44,7 +44,7 @@ span {
   }
   
   .key__esc {
-    background: #EE786E;
+    background: #F72585;
   }
   
   .key__enter {
@@ -68,7 +68,7 @@ span {
   }
   
   .key__arrow {
-    background: #A2CCB6;
+    background: #4361EE;
   }
   
   .feather {
