--- a/webSite/src/assets/css/styles.css
+++ b/webSite/src/assets/css/styles.css
@@ -1,11 +1,12 @@
 :root {
     --main-bg: black;
-    --main-color: white;
     --dark-grey: rgb(101, 101, 101);
     --light-purple: #bd66dd;
-    --highlight-color: #E50914;
-    --call-to-action: aqua;
-    --positive-correspondance: green;
+    --shadow: #989696;
+    --light-blue: #cbeefa;
+    --dark-navy: #25154d;
+    --navy: #3a0ca3;
+    --dark-purple:#7209b7;
 }
 
 body {
@@ -21,19 +22,33 @@ body {
     align-items: center;
 }
 
+#background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
 .container {
     width: 400px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: var(--light-blue);
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px var(--main-bg);
     text-align: center;
+    opacity: 0;
+    z-index: 2;
 }
 
 h1 {
     text-align: center;
-    color: #333;
+    color: var(--dark-navy);
+    font-family: 'Press Start 2P', sans-serif;
+    font-size: 30px;
+    text-shadow: 3px 3px 3px var(--shadow);
 }
 
 .menu {
@@ -50,13 +65,16 @@ h1 {
     margin-bottom: 10px;
     text-align: center;
     text-decoration: none;
-    color: #fff;
-    background-color: #007bff;
+    color: whitesmoke;
+    background-color: var(--navy);
     border-radius: 5px;
+    box-shadow: 0 3px 5px var(--main-bg);
+    font-family: 'VT323', monospace;
+    font-size: 20px;
 }
 
 .menu a:hover {
-    background-color: #0056b3;
+    background-color: var(--dark-purple);
 }
 
 #loading-overlay {
