--- a/webSite/src/assets/css/mainGame.css
+++ b/webSite/src/assets/css/mainGame.css
@@ -13,6 +13,7 @@ body {
     background-color: black;
     min-height: 100vh;
     margin: 0;
+    user-select: none;
 }
 
 #container {
@@ -35,4 +36,11 @@ body {
 .side-containers div  {
     width: 100%;
     text-align: center;
+}
+
+#draggableBox {
+    position: absolute;
+    border: 2px solid red;
+    height: 100px;
+    width: 100px;
 }
