--- a/webSite/src/assets/css/styles_fight.css
+++ b/webSite/src/assets/css/styles_fight.css
@@ -1,9 +1,11 @@
-
 body {
     text-align: center;
     margin: 0;
     color: #FFFFF4;
-    border: 15px solid black; 
+    background-color: rgba(0, 0, 0, 0.7);
+    display: block;
+    height: 100%;
+    width: auto;
 }
 
 body::before {
@@ -13,71 +15,69 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../png/garage/0_light.png);
+    background-image: url(../png/garage/0_light.png);
     background-size: cover;
-    filter: blur(8px); /* Adjust the blur strength as needed */
-    z-index: -1; /* Place the blurred background behind the main content */
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: blur(5px);
+    z-index: -1;
 }
 
 #main {
     display: flex;
-    min-height: calc(100vh - 40vh);
-    position: relative;
-    z-index: 1; /* Ensure the main content appears above the blurred background */
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
 }
-#main > article {
-    flex: 1;
-}
-#main > nav, 
-#main > aside {
-    flex: 0 0 20vw;
-}
-#main > nav {
-    order: -1;
-}
-header, footer, article, nav, aside {
-    padding: 1em;
-}
+
 header, footer {
     background: #7209B7;
-    height: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: center; /* Center horizontally */
+    color: #FFFFF4;
+    font-family: 'IM Fell DW Pica', serif;
+    font-size: 1.5em;
 }
 
 header {
-    border-bottom: 5px solid black; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 footer {
-    border-top: 5px solid black; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #530e94;
 }
 
 h2 {
     min-height: 50px;
+    font-size: 3em;
 }
-#main img {
-    max-width: 30%;
+
+#monster {
+    width: 15em;
+    margin: 0 auto;
+    margin-top: 2em;
     height: auto;
 }
 
 #targetWord, #wordWritten {
-    font-size: 24px;
-    padding: 10px;
-
-    display: flex;
-    align-items: center; /* Center vertically */
-    justify-content: center; /* Center horizontally */
-    text-align: center; /* Additional centering for text */
+    font-size: 2em;
+    padding: 0.5em;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    height: auto;
+    margin: auto;
 }
 
 #wordWritten {
     border: 1px solid #000;
-    background-color: #f0f0f0; /* Light gray background */
+    background-color: #f0f0f0;
     color: rgb(0, 0, 0);
-
-
+    margin-bottom: 1em;
 }
 
 #endLabel {
@@ -85,15 +85,14 @@ h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #4CC9F0;
-    border: 5px solid #3A0CA3;
-
+    background-color: #d54cf0;
+    border: 5px solid #530e94;
     color: #fff;
     text-align: center;
     padding: 20px;
     font-size: 24px;
     font-weight: bold;
-    z-index: 9999; /* Ensure the label is on top of everything */
+    z-index: 9999;
 }
 
 #overlay {
@@ -102,89 +101,6 @@ h2 {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
-    z-index: 9998; /* Z-index just below the label */
-}
-
-/*patternGame*/
-.button-container {
-    display: center;
-    margin: auto;
-}
-
-.row {
-    display: grid;
-    grid-template-columns: repeat(2, 150px);
-    gap: 100px;
-    margin: 50px;
-    justify-content: center;
-}
-
-.color-button {
-    width: 160px;   
-    height: 160px;
-}
-
-.color-button:hover {
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    box-shadow: inset 0px 0px 0px 2px white;
-    filter: brightness(1.5);
-}
-
-#blue {
-    background-color: #4361EE;
-    border-radius: 100%;
-} 
-.blue-click{
-    background-color: rgb(150,255,150) !important;
-}
-
-#pink {
-    background-color: #F72585;
-    border-radius: 100%;
-}
-
-.pink-click{
-    background-color: rgb(255,150,150) !important;
-}
-
-#yellow { 
-    background-color: #FFBE0B; 
-    border-radius: 100%;
-}
-.yellow-click {
-    background-color: rgb(255,255,150) !important;
-}
-#purple {
-    background-color: #8338EC;
-    border-radius: 100%;
-}
-.purple-click{
-    background-color: rgb(150,150,255) !important;
-}
-
-.start-button {
-    /*
-    padding: 10px;
-    font-size: 10px;
-    cursor: pointer;
-    */
-    background-color: rgb(25, 25, 25);
-    border-radius: 100%;
-    box-shadow: 0 0 50px;
-    height: 100px;
-    width: 100px;
-    margin: auto;
-    text-align: center;
-    justify-content: center;
-}
-
-p{
-    color:white;
-    font-size: 35px;
-    font-weight: 400;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9998;
 }
