typing game : Amélioration de l'affichage
Le clavier allume maintenent en mauve pour les touches non alphanumérique
La barre espace revient maintenent au blanc après avoir été doré
Les chiffres allume maintenant en rouge
L'affichage de fin indique le nombre de mauvaise touche et s'ajuste à la page

--- a/webSite/src/assets/css/styles_fight.css
+++ b/webSite/src/assets/css/styles_fight.css
@@ -63,7 +63,7 @@ h2 {
 }
 
 #targetWord, #wordWritten {
-    font-size: 2em;
+    font-size: 3em;
     padding: 0.5em;
     align-items: center;
     justify-content: center;
@@ -74,7 +74,7 @@ h2 {
 }
 
 #wordWritten {
-    border: 1px solid #000;
+    border: 0.1em solid #000;
     background-color: #f0f0f0;
     color: rgb(0, 0, 0);
     margin-bottom: 1em;
@@ -86,11 +86,11 @@ h2 {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #d54cf0;
-    border: 5px solid #530e94;
+    border: 0.1em solid #530e94;
     color: #fff;
     text-align: center;
-    padding: 20px;
-    font-size: 24px;
+    padding: 2em;
+    font-size: 3em;
     font-weight: bold;
     z-index: 9999;
 }
