typing game : mini update visuel au clavier

--- a/webSite/src/assets/css/styles_keyboard.css
+++ b/webSite/src/assets/css/styles_keyboard.css
@@ -48,6 +48,10 @@
   grid-column: span 12;
 }
 
+.key__logo {
+  background-color: transparent;
+}
+
 .key__logo > img {
   flex-shrink: 0;
   width: 3em;
