transfert background to typing game

--- a/webSite/src/assets/css/styles_fight.css
+++ b/webSite/src/assets/css/styles_fight.css
@@ -15,7 +15,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../png/garage/0_light.png);
+    background-image: var(--before-background-image, url(../png/garage/0_light.png));
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
