--- a/webSite/src/assets/css/styles_fight.css
+++ b/webSite/src/assets/css/styles_fight.css
@@ -1,11 +1,9 @@
+
 body {
     text-align: center;
     margin: 0;
     color: #FFFFF4;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: block;
-    height: 100%;
-    width: auto;
+    border: 15px solid black; 
 }
 
 body::before {
@@ -15,73 +13,73 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: var(--before-background-image, url(../png/garage/0_light.png));
+    background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../png/garage/0_light.png);
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    filter: blur(5px);
-    z-index: -1;
+    filter: blur(8px); /* Adjust the blur strength as needed */
+    z-index: -1; /* Place the blurred background behind the main content */
 }
 
 #main {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    min-height: calc(100vh - 40vh);
+    position: relative;
+    z-index: 1; /* Ensure the main content appears above the blurred background */
 }
 
+#main > article {
+    flex: 1;
+}
+#main > nav, 
+#main > aside {
+    flex: 0 0 20vw;
+}
+#main > nav {
+    order: -1;
+}
+header, footer, article, nav, aside {
+    padding: 1em;
+}
 header, footer {
     background: #7209B7;
-    color: #FFFFF4;
-    font-family: 'IM Fell DW Pica', serif;
-    font-size: 1.5em;
-}
-
-header {
+    height: 10vh;
     display: flex;
     align-items: center;
     justify-content: center; /* Center horizontally */
 }
 
 header {
-    border-bottom: 5px solid black; 
+    border-bottom: solid black; 
 }
 
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: #530e94;
+    border-top: 5px solid black; 
 }
 
 h2 {
     min-height: 50px;
-    font-size: 3em;
 }
-
-#monster {
-    width: 15em;
-    margin: 0 auto;
-    margin-top: 2em;
+#main img {
+    max-width: 30%;
     height: auto;
 }
 
 #targetWord, #wordWritten {
-    font-size: 3em;
-    padding: 0.5em;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 80%;
-    height: auto;
-    margin: auto;
+    font-size: 24px;
+    padding: 10px;
+
+    display: flex;
+    align-items: center; /* Center vertically */
+    justify-content: center; /* Center horizontally */
+    text-align: center; /* Additional centering for text */
 }
 
 #wordWritten {
-    border: 0.1em solid #000;
-    background-color: #f0f0f0;
+    border: 1px solid #000;
+    background-color: #f0f0f0; /* Light gray background */
     color: rgb(0, 0, 0);
-    margin-bottom: 1em;
+
+
 }
 
 #endLabel {
@@ -89,14 +87,15 @@ h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #d54cf0;
-    border: 0.1em solid #530e94;
+    background-color: #4CC9F0;
+    border: 5px solid #3A0CA3;
+
     color: #fff;
     text-align: center;
-    padding: 2em;
-    font-size: 3em;
+    padding: 20px;
+    font-size: 24px;
     font-weight: bold;
-    z-index: 9999;
+    z-index: 9999; /* Ensure the label is on top of everything */
 }
 
 #overlay {
@@ -111,22 +110,9 @@ h2 {
 }
 
 /*patternGame*/
-.button-container {
-    display: center;
-    margin: auto;
-}
-
-.row {
-    display: grid;
-    grid-template-columns: repeat(2, 150px);
-    gap: 100px;
-    margin: 50px;
-    justify-content: center;
-}
-
 .color-button {
-    width: 160px;   
-    height: 160px;
+    width: 15vw;   
+    height: 15vw;
 }
 
 .color-button:hover {
@@ -136,11 +122,8 @@ h2 {
 }
 
 #blue {
-    background-color: #4361EE;
+    background-color: #4CC9F0;
     border-radius: 100%;
-} 
-.blue-click{
-    background-color: rgb(150,255,150) !important;
 }
 
 #pink {
@@ -148,46 +131,52 @@ h2 {
     border-radius: 100%;
 }
 
-.pink-click{
-    background-color: rgb(255,150,150) !important;
-}
-
 #yellow { 
     background-color: #FFBE0B; 
     border-radius: 100%;
-}
-.yellow-click {
-    background-color: rgb(255,255,150) !important;
 }
 #purple {
     background-color: #8338EC;
     border-radius: 100%;
 }
-.purple-click{
-    background-color: rgb(150,150,255) !important;
-}
 
-.start-button {
-    /*
-    padding: 10px;
-    font-size: 10px;
-    cursor: pointer;
-    */
-    background-color: rgb(25, 25, 25);
+#start {
+    background-color: rgb(219, 219, 219);
     border-radius: 100%;
-    box-shadow: 0 0 50px;
-    height: 100px;
-    width: 100px;
+    box-shadow: 0 0 50px #aeacac;
+    height: 20vw;
+    width: 20vw;
     margin: auto;
     text-align: center;
     justify-content: center;
+    font-family: 'VT323', monospace;
+    font-size: 50px;
+    font-weight: 400;
 }
 
-p{
-    color:white;
-    font-size: 35px;
-    font-weight: 400;
+#instructions {
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    background-color: #3A0CA3;
+    padding: 5px;
+    font-size: 22px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    height: 80vh;
+}
+
+.grid-item {
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.grid-container > :nth-child(3) {
+    grid-row: span 2;
 }
