--- a/webSite/src/assets/css/styles_fight.css
+++ b/webSite/src/assets/css/styles_fight.css
@@ -22,6 +22,8 @@ body::before {
 #main {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     min-height: calc(100vh - 40vh);
     position: relative;
     z-index: 1; /* Ensure the main content appears above the blurred background */
@@ -67,7 +69,7 @@ h2 {
 #targetWord, #wordWritten {
     font-size: 24px;
     padding: 10px;
-
+    width: 75vw;
     display: flex;
     align-items: center; /* Center vertically */
     justify-content: center; /* Center horizontally */
