--- a/webSite/src/assets/css/mainGame.css
+++ b/webSite/src/assets/css/mainGame.css
@@ -1,11 +1,15 @@
-img {
+body > img {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+}
+
+img {
+    transform: translate(-50%, -50%);
+    pointer-events: none;
 }
 
 
@@ -31,6 +35,7 @@ body {
     display: flex;
     align-items: center;
     color: white;
+    z-index : 100;
 }
 
 .side-containers div  {
@@ -40,9 +45,13 @@ body {
 
 .draggable {
     position: absolute;
-    /* border: 2px solid red; */
+    /*border: 2px solid red;*/
     height: 8.8%;
     width: 14.5%;
     left: 5.1%;
     top: 38%;
+}
+
+#tire {
+    z-index: 1;
 }
