--- a/webSite/src/assets/css/styles.css
+++ b/webSite/src/assets/css/styles.css
@@ -29,6 +29,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1;
+    pointer-events: none;
 }
 
 .container, .instructions-container {
@@ -41,6 +42,7 @@ body {
     text-align: center;
     opacity: 0;
     z-index: 2;
+    cursor:default;
 }
 
 .instructions-container {
@@ -52,7 +54,6 @@ body {
     font-size: 40px;
     position: fixed;
     bottom: 0;
-    cursor:default;
 }
 
 #back {
@@ -68,7 +69,7 @@ body {
     left: 2vh;
     font-family: 'VT323', monospace;
     font-size: 25px;
-    cursor:default;
+    cursor:pointer;
 }
 
 #backButton {
@@ -112,6 +113,7 @@ h1 {
     box-shadow: 0 3px 5px var(--main-bg);
     font-family: 'VT323', monospace;
     font-size: 20px;
+    cursor: pointer;
 }
 
 .menu a:hover {
@@ -133,6 +135,7 @@ h1 {
 
 #logo {
     height: 75vh;
+    pointer-events: none;
 }
 
 .spinner {
