--- a/webSite/src/assets/css/styles.css
+++ b/webSite/src/assets/css/styles.css
@@ -140,44 +140,44 @@ h1 {
 
 .spinner {
     opacity: 0;
-    border: 8px solid;
+    border: 1em solid;
     border-color: var(--dark-grey);
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 20vh;
+    height: 20vh;
     transform: rotate(45deg);
     animation: colorChange 7s linear 1;
 }
 
 @keyframes colorChange {
     0%, 100% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--light-purple);
-        border-bottom: 8px solid var(--light-purple);
-        border-left: 8px solid var(--light-purple);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--light-purple);
+        border-bottom: 1em solid var(--light-purple);
+        border-left: 1em solid var(--light-purple);
     }
     20% {
-        border-top: 8px solid var(--dark-grey);
-        border-right: 8px solid var(--dark-grey);
-        border-bottom: 8px solid var(--dark-grey);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--dark-grey);
+        border-right: 1em solid var(--dark-grey);
+        border-bottom: 1em solid var(--dark-grey);
+        border-left: 1em solid var(--dark-grey);
     }
     40% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--dark-grey);
-        border-bottom: 8px solid var(--dark-grey);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--dark-grey);
+        border-bottom: 1em solid var(--dark-grey);
+        border-left: 1em solid var(--dark-grey);
     }
     60% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--light-purple);
-        border-bottom: 8px solid var(--dark-grey);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--light-purple);
+        border-bottom: 1em solid var(--dark-grey);
+        border-left: 1em solid var(--dark-grey);
     }
     80% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--light-purple);
-        border-bottom: 8px solid var(--light-purple);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--light-purple);
+        border-bottom: 1em solid var(--light-purple);
+        border-left: 1em solid var(--dark-grey);
     }
 }
