--- a/webSite/src/assets/css/styles.css
+++ b/webSite/src/assets/css/styles.css
@@ -33,12 +33,12 @@ body {
 }
 
 .container, .instructions-container {
-    width: 400px;
+    width: 40vw;
     margin: 0 auto;
-    padding: 20px;
+    padding: 5vw;
     background-color: var(--light-blue);
-    border-radius: 5px;
-    box-shadow: 0 2px 5px var(--main-bg);
+    border-radius: 0.5vw;
+    box-shadow: 0 0.2vw 0.5vw var(--main-bg);
     text-align: center;
     opacity: 0;
     z-index: 2;
@@ -46,12 +46,12 @@ body {
 }
 
 .instructions-container {
-    width : 750px;
+    width : 75vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     font-family: 'VT323', monospace;
-    font-size: 40px;
+    font-size: 4vw;
     position: fixed;
     bottom: 0;
 }
@@ -62,13 +62,13 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #3a86ff;
-    width: 175px;
-    height: 25px;
+    width: 17.5vw;
+    height: 2.5vw;
     position: fixed;
     top: 2vh;
     left: 2vh;
     font-family: 'VT323', monospace;
-    font-size: 25px;
+    font-size: 2.5vw;
     cursor:pointer;
 }
 
@@ -78,7 +78,7 @@ body {
 
 .side-containers {
     cursor: pointer;
-    width: 10vw;
+    width: 5vw;
 }
 
 #left {
@@ -89,30 +89,30 @@ h1 {
     text-align: center;
     color: var(--dark-navy);
     font-family: 'Press Start 2P', sans-serif;
-    font-size: 30px;
-    text-shadow: 3px 3px 3px var(--shadow);
+    font-size: 3vw;
+    text-shadow: 0.3vw 0.3vw 0.3vw var(--shadow);
 }
 
 .menu {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 3vw;
 }
 
 .menu a {
     display: block;
-    width: 200px;
-    padding: 10px;
-    margin-bottom: 10px;
+    width: 20vw;
+    padding: 1vw;
+    margin-bottom: 1vw;
     text-align: center;
     text-decoration: none;
     color: whitesmoke;
     background-color: var(--navy);
-    border-radius: 5px;
-    box-shadow: 0 3px 5px var(--main-bg);
+    border-radius: 0.5vw;
+    box-shadow: 0 0.3vw 0.5vw var(--main-bg);
     font-family: 'VT323', monospace;
-    font-size: 20px;
+    font-size: 2vw;
     cursor: pointer;
 }
 
