--- a/webSite/src/assets/css/styles.css
+++ b/webSite/src/assets/css/styles.css
@@ -46,29 +46,30 @@ body {
 }
 
 .instructions-container {
-    width : 75vw;
+    width : 50vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     font-family: 'VT323', monospace;
-    font-size: 4vw;
+    font-size: 2vw;
     position: fixed;
     bottom: 0;
 }
 
 #back {
     display: flex;
+    padding: 2vw;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     background-color: #3a86ff;
-    width: 17.5vw;
-    height: 2.5vw;
+    width: 15vw;
+    height: 1vw;
     position: fixed;
     top: 2vh;
     left: 2vh;
     font-family: 'VT323', monospace;
-    font-size: 2.5vw;
+    font-size: 1.5vw;
     cursor:pointer;
 }
 
