--- a/webSite/src/assets/css/mainGame.css
+++ b/webSite/src/assets/css/mainGame.css
@@ -1,57 +1,75 @@
-body > img {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+:root{
+    --main-bg: rgb(22, 20, 20);
 }
-
-img {
-    transform: translate(-50%, -50%);
-    pointer-events: none;
-}
-
 
 body {
-    background-color: black;
-    min-height: 100vh;
     margin: 0;
-    user-select: none;
-}
+    background-color: var(--main-bg);
+    background-image: url("../png/garage/0.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 100vw;
+    height: 100vh
 
-#container {
+  }
+
+  svg {
     position: fixed;
-    display: flex;
-    justify-content: space-between;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.side-containers  {
-    height : 100%;
-    width: 60px;
-    display: flex;
-    align-items: center;
-    color: white;
-}
-
-.side-containers div  {
-    width: 100%;
-    text-align: center;
-}
-
-.draggable {
-    position: absolute;
-    border: 2px solid red;
-    height: 8.8%;
-    width: 14.5%;
-    left: 5.1%;
-    top: 38%;
-}
-
-#tire {
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     z-index: 1;
+  }
+
+  /* #front-image:hover {
+      mask: url("#cursorMask");
+  } */
+
+  #front-image {
+      filter: brightness(0.3);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 2;
+  }
+
+  .front:hover {
+      mask: url("#cursorMask");
+  }
+
+  .monster {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 7em;
+      height: auto;
+      z-index: 0;
+  }
+
+.side-containers {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 10vw;
+    height: 5vw;
+    background-color: transparent;
+    color: #fff;
+    text-align: center;
+    line-height: 5vw;
+    font-size: 1.6vw;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.side-containers.left {
+    left: 1vw;
+}
+
+.side-containers.right {
+    right: 1vw;
 }
