--- a/webSite/src/assets/css/searchLight.css
+++ b/webSite/src/assets/css/searchLight.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     background-color: var(--main-bg);
-    background-image: url("../png/bedroom/1.png");
+    background-image: url("../png/garage/0.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
