--- a/webSite/src/assets/css/mainGame.css
+++ b/webSite/src/assets/css/mainGame.css
@@ -45,7 +45,7 @@ body {
       position: absolute;
       top: 50%;
       left: 50%;
-      width: 7em;
+      width: 5%;
       height: auto;
       z-index: 0;
   }
