tutorial with flashlight + text in pattern game

--- a/webSite/src/assets/css/searchLight.css
+++ b/webSite/src/assets/css/searchLight.css
@@ -40,7 +40,7 @@ body {
       position: absolute;
       top: 50%;
       left: 50%;
-      width: 7em;
+      width: 7vw;
       height: auto;
       z-index: 0;
   }
