--- a/webSite/src/assets/css/styles.css
+++ b/webSite/src/assets/css/styles.css
@@ -14,6 +14,25 @@ body {
     font-family: Arial, sans-serif;
 }
 
+#flashlight {
+    margin: 0;
+    background-image: url("../png/bedroom/1.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+}
+
+svg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+}
+
 .pageCenter{
     margin: 0;
     height: 100vh;
@@ -31,16 +50,28 @@ body {
     z-index: 1;
     pointer-events: none;
 }
- 
-#bedroom {
-    position: fixed;
+
+#front-image:hover {
+    mask: url("#cursorMask");
+}
+
+#front-image {
+    filter: brightness(0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+}
+
+.monster {
+    position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-    pointer-events: none;
+    width: 7vw;
+    height: auto;
+    z-index: 0;
 }
 
 .container, .instructions-container {
@@ -66,6 +97,14 @@ body {
     font-size: 2vw;
     position: fixed;
     bottom: 0;
+    z-index: 999;
+}
+
+#mask {
+    height: 100%;
+    width: 100%;
+    background-color: var(--main-bg);
+    z-index: 998;
 }
 
 #back {
@@ -83,6 +122,7 @@ body {
     font-family: 'VT323', monospace;
     font-size: 1.5vw;
     cursor:pointer;
+    z-index: 999;
 }
 
 #backButton {
@@ -127,6 +167,10 @@ h1 {
     font-family: 'VT323', monospace;
     font-size: 2vw;
     cursor: pointer;
+}
+
+.main-container {
+    z-index: 1;
 }
 
 .menu a:hover {
