--- a/webSite/src/assets/css/mainGame.css
+++ b/webSite/src/assets/css/mainGame.css
@@ -12,8 +12,7 @@ body {
     background-size: contain;
     background-position: center;
     width: 100vw;
-    height: 100vh
-
+    height: 100vh;
   }
 
   svg {
@@ -66,6 +65,7 @@ body {
     font-weight: bold;
     cursor: pointer;
     z-index: 3;
+    user-select: none;
 }
 
 .side-containers.left {
