--- a/webSite/src/assets/css/mainGame.css
+++ b/webSite/src/assets/css/mainGame.css
@@ -41,3 +41,32 @@ body {
     border-radius: 100%;
     cursor: pointer;
 }
+
+.room-view  {
+    position: absolute;
+    top: 50%;
+    width: 7vw;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 5vw;
+}
+
+.room-view div  {
+    text-align: center;
+    background-color: #4CC9F0;
+    border-radius: 100%;
+    cursor: pointer;
+    position: fixed;
+    height: 10vh;
+    width:10vh;
+    z-index: 999;
+}
+
+#leftArrow {
+    left: 2vw;
+}
+
+#rightArrow {
+    right: 2vw;
+}
