--- a/webSite/src/assets/css/styles_fight.css
+++ b/webSite/src/assets/css/styles_fight.css
@@ -13,10 +13,12 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../png/garage/0_light.png);
+    background-image: var(--before-background-image, url(../png/garage/0.png));
     background-size: cover;
-    filter: blur(8px); /* Adjust the blur strength as needed */
-    z-index: -1; /* Place the blurred background behind the main content */
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: blur(5px);
+    z-index: -1;
 }
 
 #main {
@@ -44,7 +46,7 @@ header, footer, article, nav, aside {
 }
 header, footer {
     background: #7209B7;
-    height: 10vh;
+    height: 7vh;
     display: flex;
     align-items: center;
     justify-content: center; /* Center horizontally */
@@ -55,14 +57,14 @@ header {
 }
 
 footer {
-    border-top: 5px solid black;
+    border-top: 3vh solid black;
 }
 
 h2 {
     min-height: 50px;
 }
 #main img {
-    max-width: 30%;
+    max-width: 15vw;
     height: auto;
 }
 
